navbar, home components, add google fonts in html, css)

--- a/src/style/App.css
+++ b/src/style/App.css
@@ -1,11 +1,7 @@
-/* #login {
-  background-color: red;
-  border-radius: 50%;
-  width: 10em;
-  height: 10em;
-  margin: 30%;
-  text-align: center;
-} */
+body{
+  font-family: 'Montserrat', sans-serif;
+}
+
 
 .App {
   background-image: url("../assets/scott-webb-214087-unsplash.jpg");
