--- a/src/style/navbar.css
+++ b/src/style/navbar.css
@@ -1,6 +1,6 @@
 .navbar {
   height: 5vh;
-  background-color: #71c550;
+  background-color: #8ad7b5;
   display: grid;
   grid-template-columns: 1fr 1.2fr 1fr;
   align-items: center;
