--- a/src/style/App.css
+++ b/src/style/App.css
@@ -20,23 +20,7 @@ body{
 .cold{
   color:rgb(130, 130, 240);
 }
-.temp-is-fine{
+.is-fine{
   color:#8ad7b5;
 }
 
-.humid-high{
-  color:rgb(223, 94, 94);
-}
-
-.humid-low{
-  color:rgb(130, 130, 240);
-}
-
-.moist-high{
-  color:rgb(223, 94, 94);
-}
-
-.moist-low{
-  color:rgb(130, 130, 240);
-
-}
