--- a/src/style/navbar.css
+++ b/src/style/navbar.css
@@ -2,7 +2,7 @@
   height: 5vh;
   background-color: #8ad7b5;
   display: grid;
-  grid-template-columns: 1fr 1.2fr 1fr;
+  grid-template-columns: 1fr 1fr 1fr 3fr;
   align-items: center;
   justify-items: center;
 }
