--- a/src/style/plant.css
+++ b/src/style/plant.css
@@ -5,9 +5,11 @@
     "img water"
     "img temp"
     "img harvest";
-    grid-template-columns: 1fr 3fr;
-    grid-gap: 2%;
+    grid-template-columns: 2fr 3fr;
+    grid-gap: 4%;
+    margin:4%;
 }
+
 
 .plant-img{
     grid-area: img;
@@ -15,6 +17,7 @@
 }
 .plant-name{
     grid-area:name;
+    margin-top:6%;
 }
 .plant-harvest{
     grid-area:harvest;
@@ -28,6 +31,8 @@
 .img{
     width:100px;
     height:100px;
-    border-radius: 2%;
-    
+    border-radius: 50%;
+    margin:1%;
+    box-shadow: 2px 2px 2px 0px rgba(173,173,173,1);
+
 }
